load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

cc_library(
    name = "entity_manager",
    srcs = ["entity_manager.cc"],
    hdrs = ["entity_manager.hh"],
    copts = copts,
    local_defines = [
        "ECSACT_CORE_API=",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:core",
        "//reference/async_reference/callbacks:async_callbacks",
        "//reference/async_reference/util:types",
    ],
)
