load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

cc_library(
    name = "request_id_factory",
    hdrs = ["request_id_factory.hh"],
    copts = copts,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "sources",
    srcs = glob([
        "**/*.hh",
        "**/*.cc",
    ]),
    visibility = [
        "//reference/async_reference:__pkg__",
    ],
)
