load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

cc_library(
    name = "util",
    srcs = ["util.cc"],
    hdrs = ["util.hh"],
    copts = copts,
    local_defines = [
        "ECSACT_CORE_API=",
        "ECSACT_SERIALIZE_API=",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:core",
        "//:serialize",
        "//reference/async_reference/util:types",
        "//reference/serialize_reference",
    ],
)

cc_library(
    name = "types",
    hdrs = ["types.hh"],
    copts = copts,
    local_defines = [
        "ECSACT_CORE_API=",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:async",
        "//:core",
    ],
)
